--- a/gleam.toml
+++ b/gleam.toml
@@ -2,7 +2,7 @@ name = "gliberapay"
 version = "1.0.0"
 description = "Work with Liberapay in Gleam!"
 licences = ["Apache-2.0"]
-repository = { type = "github", user = "lpil", repo = "argv" }
+repository = { type = "github", user = "lpil", repo = "gliberapay" }
 links = [
   { title = "Website", href = "https://gleam.run" },
   { title = "Sponsor", href = "https://github.com/sponsors/lpil" },
